--- a/033-day.md
+++ b/033-day.md
@@ -14,6 +14,8 @@ sudo vim /etc/ss.json
 ```
 
 4. 安装MongoDB
+
+    其实MongoDB已经在Ubuntu的默认仓库中了，只是它并不是最新版。建议使用官方的MongoDB仓库
 - 1.使用MongoDB仓库，添加key：
 
   > sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 0C49F3730359A14518585931BC711F9BA15703C6
