--- a/033-day.md
+++ b/033-day.md
@@ -36,3 +36,12 @@ sudo vim /etc/ss.json
 1. https://github.com/qianjiahao/MongoDB/wiki/%E9%85%8D%E7%BD%AE%E3%80%81%E5%90%AF%E5%8A%A8MongoDB
 
 1. http://blog.topspeedsnail.com/archives/4820
+
+## Windows MongoDB
+
+1. 官网下载安装后，在c/Progranm Files/MongoDB/server/3.4/bin
+2. 配置环境变量： PATH后加上c/Progranm Files/MongoDB/server/3.4/bin
+3. 创建 c/data/db 目录
+4. 在bin目录下 mongod.exe
+5. 新开一个cmd mongo
+6. 打开 127.0.0.1:27017
