--- a/033-day.md
+++ b/033-day.md
@@ -42,6 +42,6 @@ sudo vim /etc/ss.json
 1. 官网下载安装后，在c/Progranm Files/MongoDB/server/3.4/bin
 2. 配置环境变量： PATH后加上c/Progranm Files/MongoDB/server/3.4/bin
 3. 创建 c/data/db 目录
-4. 在bin目录下 mongod.exe
-5. 新开一个cmd mongo
+4. 在bin目录下 mongod --dbpath /data/db/
+5. 新开一个cmd 运行mongo
 6. 打开 127.0.0.1:27017
