--- a/034-day.md
+++ b/034-day.md
@@ -160,3 +160,12 @@ db.foo.find()
 > 删除数据是永久性的，不能撤销，也不能恢复。
 
 2. 删除速度
+> 删除文档通常很快，但是如果要清空整个集合，那么使用drop直接删除集合会更快(然后在这个空集合上重建各项索引)。
+
+#### 更新文档
+> 文档存入数据库以后，就可以使用updage方法来更新它。update有两个参数，一个是查询文档，用于定位需要更新的目标文档；另一个是修改器(modifier)文档，用于说明要对找到的文档进行哪些修改。
+
+> 更新操作是不可分割的：若是两个更新同时发生，先到达服务器的先执行，接着执行另外一个。所以，两个需要同时进行的更新会迅速接连完成，此过程不会破坏文档：最新的更新会取得"胜利".
+
+1. 文档替换
+最简单的更新就是用一个新文档完全替换匹配的文档。这适用于大规模模式迁移的情况。
