--- a/034-day.md
+++ b/034-day.md
@@ -38,22 +38,25 @@ mongod --prot 27018 --depath mongo_demo
 #### shell的基本操作：增删改查
 
 ```
-//列出所有的数据库   
-show databases; 
-或者  
-show dbs
+//列出所有的数据库  
+库操作 
+		查看当前链接在哪个数据库下  db
 
-//查看当前链接在哪个数据库下
-db
+		切换数据库 use `数据库名称`
 
-//切换数据库
-use `数据库名称`
+　　新建数据库：第一步：use 新建数据库名；第二步：进行此库相关的操作；如果不进行第二步，该数据库不会被创建
 
-//查看数据库中有那些表
-show collections 
+　　查看数据库：show dbs; 或者  show databases; 
 
-//创建新的数据库
-use mongo_demo  
+　　新建表：db.createCollection('要新建的表名');
+
+　　查看当前数据库下表： show collections;
+
+　　删除当前数据库指定表：db.表名.drop();
+
+　　删除当前数据库：db.dropDatabase();
+
+ 
 ```
 
 1. 创建
