--- a/032-day.md
+++ b/032-day.md
@@ -1,6 +1,6 @@
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 ## 面向对象
-
-
 
 当以new操作符调用构造函数时，函数内部将会发生以下情况：
 1. 创建一个空对象并且this变量引用了该对象，同时还继承了该函数的原型
