--- a/代码片段.md
+++ b/代码片段.md
@@ -7,3 +7,38 @@
 [1,2,3,4,5,6,7].map( (n)=>{var o={}; o['type'+n] ='type'+n; return o})
 
 ```
+
+## 统计一个页面上所有标签的个数
+
+```
+
+document.getElementsByTagName('*')
+
+
+document.querySelectorAll("*")
+
+
+document.all
+
+$$('*').map(e=>e.tagName)
+
+$$('*').length
+
+```
+
+## 查找HTML中各个标签的个数
+
+```
+function countTag(dom,countObj){
+	countObj[dom.tagName] = countObj[dom.tagName] ? countObj[dom.tagName] + 1 : 1
+	if (dom.children.length == 0){
+		return
+	}
+	for(var i = 0;i < dom.children.length; i++){
+		countTag(dom.children[i],countObj)
+	}
+}
+var obj = {}
+countTag(document.children[0],obj)
+console.log(obj)
+```
