--- a/代码片段.md
+++ b/代码片段.md
@@ -42,3 +42,11 @@ var obj = {}
 countTag(document.children[0],obj)
 console.log(obj)
 ```
+
+## 判断类型
+```
+Object.prototype.toString.call( )
+
+Object.prototype.toString.call(33) //[object Number]
+
+```
