数据基本知识

--- a/数据基本知识.md
+++ b/数据基本知识.md
@@ -9,3 +9,38 @@
 + 散列：根据关键码值（Key value）直接进行访问的数据结构；它通过把关键码值映射到表中一个位置来访问记录，以加快查找的速度；这个映射函数叫做散列函数，存放记录的数组叫做散列表。
 + 树：由 n（n>=1）个有限节点组成一个具有层次关系的集合；把它叫做“树”是因为它看起来像一棵倒挂的树，也就是说它是根朝上，而叶朝下的，基本呈一对多关系，树也可以看做是图的特殊形式。
 + 图：图是网络结构的抽象模型；图是一组由边连接的节点（顶点）；任何二元关系都可以用图来表示，常见的比如：道路图、关系图，呈多对多关系。
+
+## 算法
+
+[算法](https://zh.wikipedia.org/zh-hans/%E7%AE%97%E6%B3%95)
+
+高德纳在他的著作《计算机程序设计艺术》里对算法的特征归纳：
+>+ 输入：一个算法必须有零个或以上输入量。
+>+ 输出：一个算法应有一个或以上输出量，输出量是算法计算的结果。
+>+ 明确性：算法的描述必须无歧义，以保证算法的实际执行结果是精确地匹配要求或期望，通常要求实际运行结果是确定的。
+>+ 有限性：依据图灵的定义，一个算法是能够被任何图灵完备系统模拟的一串运算，而图灵机只有有限个状态、有限个输入符号和有限个转移函数（指令）。而一些定义更规定算法必须在有限个步骤内完成任务。
+>+ 有效性：又称可行性。能够实现，算法中描述的操作都是可以通过已经实现的基本运算执行有限次来实现
+
+
+### 排序算法
+[排序算法](https://zh.wikipedia.org/wiki/%E6%8E%92%E5%BA%8F%E7%AE%97%E6%B3%95#%E6%8E%92%E5%BA%8F%E7%AE%97%E6%B3%95%E5%88%97%E8%A1%A8)
++ [冒泡排序](http://bubkoo.com/2014/01/12/sort-algorithm/bubble-sort/)
++ [桶排序](http://bubkoo.com/2014/01/15/sort-algorithm/bucket-sort/)
++ [插入排序](http://bubkoo.com/2014/01/14/sort-algorithm/insertion-sort/)
++ [归并排序](http://bubkoo.com/2014/01/15/sort-algorithm/merge-sort/)
++ [快速排序](http://bubkoo.com/2014/01/12/sort-algorithm/quick-sort/)
++ [其他排序](http://bubkoo.com/tags/algorithm/)
+
+### 搜索算法
+
++ 顺序搜索 : 让目标元素与列表中的每一个元素逐个比较，直到找出给定元素相同的元素为止，缺点是效率低下。
+
++ 二分搜索 : 在一个有序列表，以中间值为基准拆分为两个子列表，拿目标元素与中间值作比较从而再在目标的子列表中递归此方法，直至找到目标元素。
+
+### 其他
+
+[贪心算法](https://zh.wikipedia.org/wiki/%E8%B4%AA%E5%BF%83%E6%B3%95)
+
+[动态规划](https://zh.wikipedia.org/wiki/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92)
+
+[复杂度概念](https://zh.wikipedia.org/wiki/NC_(%E5%A4%8D%E6%9D%82%E5%BA%A6)) [时间复杂度](https://zh.wikipedia.org/wiki/%E6%97%B6%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6)
