--- a/数据基本知识.md
+++ b/数据基本知识.md
@@ -44,3 +44,7 @@
 [动态规划](https://zh.wikipedia.org/wiki/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92)
 
 [复杂度概念](https://zh.wikipedia.org/wiki/NC_(%E5%A4%8D%E6%9D%82%E5%BA%A6)) [时间复杂度](https://zh.wikipedia.org/wiki/%E6%97%B6%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6)
+
+
+
+[参考链接](http://caibaojian.com/learn-javascript.html)
