--- a/代码片段.md
+++ b/代码片段.md
@@ -50,3 +50,12 @@ Object.prototype.toString.call( )
 Object.prototype.toString.call(33) //[object Number]
 
 ```
+
+## Google安全模式
+
+```
+win
+
+chrome.exe --disable-web-security --user-data-dir
+
+```
