--- a/代码片段.md
+++ b/代码片段.md
@@ -134,3 +134,16 @@ Number.isInteger("15") // false
 Number.isInteger(true) // false
 
 ```
+
+
+## 实现一个函数，将浮点数点左边的数每三位添加一个逗号
+
+```
+  function conmmafy(num){
+    return num && num .toString().replace(/(\d)(?=(\d{3})+\.)/g,function($1,$2){
+          return $2 + '.'
+        })
+  }
+  conmmafy(12000000.11) //2.000.000.11
+
+```
