--- a/代码片段.md
+++ b/代码片段.md
@@ -147,3 +147,39 @@ Number.isInteger(true) // false
   conmmafy(12000000.11) //2.000.000.11
 
 ```
+
+
+
+##一只青蛙一次可以跳上1级台阶，也可以跳上2级……它也可以跳上n级。求该青蛙跳上一个n级的台阶总共有多少种跳法。
+
+```
+function jumpFloorII(target){
+  if(target <= 0){
+    return -1;
+  }else if(target ==1){
+    return 1;
+  }else{
+    return 2 * jumpFloorII(target - 1);
+  }
+}
+
+jumpFloorII(3)
+console.log(jumpFloorII(3)) //4
+
+```
+
+## 一只青蛙一次可以跳上1级台阶，也可以跳上2级。求该青蛙跳上一个n级的台阶总共有多少种跳法。
+```
+function jumpFloor(number) {
+  var f = 1,
+    g = 2;
+  while (--number > 0) {
+    g += f;
+    f = g - f;
+  }
+  return f;
+}
+
+jumpFloor(3)
+// console.log(jumpFloor(4))
+```
