--- a/代码片段.md
+++ b/代码片段.md
@@ -183,3 +183,20 @@ function jumpFloor(number) {
 jumpFloor(3)
 // console.log(jumpFloor(4))
 ```
+
+
+## 立即执行函数(IIFE  Immediately Invoked Function Expression)
+
+IIFE的一个用法：把它们当做函数调用并传递参数进去
+```
+var a= 2
+(function IIFE(global){
+
+  var a = 3
+  console.log(a)
+  console.log(gloable.a)
+
+}(window))
+
+console.log(a)
+```
