--- a/闭包.md
+++ b/闭包.md
@@ -220,3 +220,59 @@ foo.change()
 foo.identify() //FOO MODULE
 ```
 通过在模块实例的内部保留对公共API对象的内部引用，可以从内部对模块实例进行修改，包括添加或删除方法和属性，已经修改它们的值
+
+
+## 现代的模块机制
+
+
+```
+var MyModules = (function () {
+  var modules = {}
+
+  function define(name, deps, impl) {
+    for (var i = 0; i < deps.length; i++) {
+      deps[i] = modules[deps[i]]
+    }
+    modules[name] = impl.apply(impl, deps)
+  }
+
+  function get(name) {
+    return modules[name]
+  }
+  return {
+    define: define,
+    get: get
+  }
+})()
+
+
+
+MyModules.define('bar', [], function () {
+  function hello(who) {
+    return "let me introduce:" + who
+  }
+  return {
+    hello: hello
+  }
+})
+
+MyModules.define('foo', ['bar'], function (bar) {
+  var hungry = 'xxx'
+
+  function awesome() {
+    console.log(bar.hello(hungry).toUpperCase())
+  }
+  return {
+    awesome: awesome
+  }
+})
+
+
+var bar = MyModules.get('bar')
+var foo = MyModules.get('foo')
+
+console.log('hippo')
+
+foo.awesome()
+
+```
