--- a/代码片段.md
+++ b/代码片段.md
@@ -216,3 +216,27 @@ ary.filter(function(x){
 // http://www.codeceo.com/article/44-javascript-crazy-question.html
 
 ```
+
+
+## forEach
+
+```
+[].forEach.call()
+
+Array.prototype.forEach.call()
+```
+```
+var divs = document.querySelectorAll('div');
+
+[].forEach.call(divs, function(div) {
+  console.log(div);
+});
+
+等价于：
+var divs = document.querySelectorAll('div');
+
+Array.prototype.forEach.call(divs, function(div) {
+  console.log(div);
+});
+
+```
