--- a/代码片段.md
+++ b/代码片段.md
@@ -270,3 +270,30 @@ var name = 'World!';
 })();
 
 ```
+## 简单节流功能实现
+
+```
+function throttle(func, wait) {
+  let prev, timer
+  return function fn() {
+    let curr = Date.now()
+    let diff = curr - prev
+    if (!prev || diff >= wait) {
+      func()
+      prev = curr
+    } else if (diff < wait) {
+      clearTimeout(timer)
+      timer = setTimeout(fn, wait - diff)
+    }
+  }
+}
+
+
+//测试
+
+  let onscroll = throttle(function () {
+    console.log(new Date())
+  }, 500)
+  window.addEventListener('scroll', onscroll)
+
+```
