--- a/代码片段.md
+++ b/代码片段.md
@@ -41,6 +41,10 @@ function countTag(dom,countObj){
 var obj = {}
 countTag(document.children[0],obj)
 console.log(obj)
+
+//更简洁的代码 (用了哪些标签)
+const getPageTags = () => [...new Set([...document.all].map(d => d.tagName.toLowerCase()))]
+
 ```
 
 ## 判断类型
